src/objects/Glxy_BudgetCallLineItem__c.object
<CustomObject>
    <fields>
        <fullName>AggregatedAmount__c</fullName>
        <formula>IF( 
   (Text(BudgetCategory__c) == &apos;Total&apos;), 
   (Oct__c + Nov__c + Dec__c + Jan__c + Feb__c + Mar__c + Apr__c + May__c + Jun__c + Jul__c +
     ExpansionPartYearCost__c +  EscalationPartYearCost__c +  CancellationPartYearCost__c ), 
    0.00 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AggregatedSqFt__c</fullName>
        <formula>IF(
   (Text(BudgetCategory__c) == &apos;Total&apos;), 
   (SquareFeet__c +  ExpansionSqFt__c +  CancellationSqFt__c), 
   0.00
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregated Sq. Ft.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr__c</fullName>
        <label>Apr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <label>Aug</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <label>Budget Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Rent</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Double Rent</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>IBAA</fullName>
                </value>
                <value>
                    <fullName>Lump Sums</fullName>
                </value>
                <value>
                    <fullName>Operating Cost Escalation (CPI)</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Project Step Rent</fullName>
                </value>
                <value>
                    <fullName>Rent Increase</fullName>
                </value>
                <value>
                    <fullName>RWA</fullName>
                </value>
                <value>
                    <fullName>Step Rent</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Project Lump Sums</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancellationAnnualRent__c</fullName>
        <label>Cancellation Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationPartYearCost__c</fullName>
        <label>Cancellation Part Year Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationSqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancellation Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataGroup__c</fullName>
        <label>Data Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <label>Dec</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DelegatedLease__c</fullName>
        <label>Delegated Lease</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegated_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EscalationAnnualRent__c</fullName>
        <label>Escalation Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalationPartYearCost__c</fullName>
        <label>Escalation Part Year Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalationSqFt__c</fullName>
        <label>Escalation Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpansionAnnualRent__c</fullName>
        <label>Expansion Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpansionPartYearCost__c</fullName>
        <label>Expansion Part Year Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpansionSqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYTotal__c</fullName>
        <formula>Jan__c + Feb__c + Mar__c + Apr__c + May__c + Jun__c + Jul__c + Aug__c + Sep__c + Oct__c + Nov__c + Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <label>Feb</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAConversionFY__c</fullName>
        <label>IAConversionFY</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <label>Jan</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul__c</fullName>
        <label>Jul</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun__c</fullName>
        <label>Jun</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseStatus__c</fullName>
        <label>Lease Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration_Date__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mar__c</fullName>
        <label>Mar</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOAOrIA__c</fullName>
        <label>NOAOrIA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>NOA</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <label>Nov</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <label>Oct</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Year_Cost__c</fullName>
        <formula>IF(
     (Text(BudgetCategory__c) == &apos;Total&apos;),
     (Oct__c + Nov__c + Dec__c + Jan__c + Feb__c + Mar__c + Apr__c + May__c + Jun__c +   
      Jul__c +  EscalationPartYearCost__c +  ExpansionPartYearCost__c +  
      CancellationPartYearCost__c),
     FYTotal__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Year Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordIdentifier__c</fullName>
        <description>Applicable to Budget Category of Totals only ...</description>
        <externalId>true</externalId>
        <label>Record Identifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionCode__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sep__c</fullName>
        <label>Sep</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Square Feet</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <label>Team Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Budget Call Line Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Budget Call Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Call Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>